--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,3 +1,5 @@
 {% extends "base.html" %} 
 {% block title%} Weather App Login {% endblock%}
-{%block content%} login page {%endblock%}
+{%block content%} login page 
+{{text}}
+{%endblock%}
