--- a/website/templates/nologpage.html
+++ b/website/templates/nologpage.html
@@ -1,3 +1,3 @@
 {% extends "base.html" %} 
 {% block title%} Weather App {% endblock%}
-{%block content%} No logged user{%endblock%}
+{%block content%} No logged user tady bude appka{%endblock%}
