--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -32,8 +32,10 @@
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+
+
           {% else %}
-          <a class="nav-item nav-link" id="nologpage" href="/nouser">No user</a>
+          <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           {% endif %}
@@ -59,7 +61,11 @@
     </div>
       {% endif %} {% endfor %} {% endif %} {% endwith %}
 
-      <div class="container">{% block content %} {% endblock %}</div>
+      <div class="container">
+      {% block content %} 
+        
+      {% endblock %}
+      </div>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
