--- a/website/templates/nologpage.html
+++ b/website/templates/nologpage.html
@@ -23,8 +23,7 @@ content%}
             <p>Place: {{ city_name }}</p>
           </div>
           <div class="col-md-4">
-            <p>Min temperature: {{min_temp}}&deg;C</p>
-            <p>Max temperature: {{max_temp}}&deg;C</p>
+            <p>Temperature: {{actual_temp}}&deg;C</p>
           </div>
           <div class="col-md-4">
             <p>Weather: {{ weather }}</p>
