--- a/website/templates/nologpage.html
+++ b/website/templates/nologpage.html
@@ -3,34 +3,67 @@ content%}
 
 <form class="container" method="post">
   <div class="form-group">
-    <h2 align="center"> City Name </h2> <input
+    <h2 align="center">City Name</h2>
+    <input
       type="text"
       class="form-control"
       placeholder="City Name"
-      name="name"
+      name="getMesto"
     />
   </div>
   <div align="center">
-  <button type="submit" class="btn btn-primary">Search Now</button>
+    <button type="submit" value="search_place" class="btn btn-primary">
+      Search Now
+    </button>
   </div>
 </form>
+  <h1 align="center">Actual weather</h1>
+  <div class="row">
+    <div class="col-md">
+      <div align="center" style="margin: 0 auto;" class="well">
 
-<div class="container">
-    <h1 align="center">Actual weather</h1>
-    
-        <div class="row">
-          <div class="col-md-4">
+        <br />
+        Obrazek
+        <br />
+
+      </div>
+    </div>
+    <div class="col-md">
+      <div class="row">
+        <div class="col-md">
+          <div class="well">
             <p>Place: {{ city_name }}</p>
           </div>
-          <div class="col-md-4">
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-md">
+          <div class="well">
             <p>Temperature: {{actual_temp}}&deg;C</p>
           </div>
-          <div class="col-md-4">
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-md">
+          <div class="well">
             <p>Weather: {{ weather }}</p>
           </div>
         </div>
-      </div>
 
+      </div>
+      {% if user.is_authenticated %}
+    <div class="row">
+      <button type="submit" value="search_place" class="btn btn-primary">
+        Search Now
+      </button>
+    </div> 
+    {% endif %}
+    </div>
+    
+  </div>
+</div>
 
 <div class="container">{% block content1 %} {% endblock %}</div>
 
