--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -32,10 +32,8 @@
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-
-
           {% else %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="home" href="/nologpage">Home</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           {% endif %}
@@ -59,11 +57,11 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-      {% endif %} {% endfor %} {% endif %} {% endwith %}
+    {% endif %} {% endfor %} {% endif %} {% endwith %}
 
       <div class="container">
       {% block content %} 
-        
+      
       {% endblock %}
       </div>
 
