--- a/website/templates/nologpage.html
+++ b/website/templates/nologpage.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block title%} Weather App {% endblock%} {%block
-content%}
+{% extends "base.html" %} {% block title%} Weather App {% endblock%}
+{%block content%}
 
 <form class="container" method="post">
   <div class="form-group">
@@ -17,54 +17,60 @@ content%}
     </button>
   </div>
 </form>
-  <h1 align="center">Actual weather</h1>
-  <div class="row">
-    <div class="col-md">
-      <div align="center" style="margin: 0 auto;" class="well">
-
-        <br />
-        Obrazek
-        <br />
-
-      </div>
-    </div>
-    <div class="col-md">
-      <div class="row">
-        <div class="col-md">
-          <div class="well">
-            <p>Place: {{ city_name }}</p>
-          </div>
-        </div>
-
-      </div>
-      <div class="row">
-        <div class="col-md">
-          <div class="well">
-            <p>Temperature: {{actual_temp}}&deg;C</p>
-          </div>
-        </div>
-
-      </div>
-      <div class="row">
-        <div class="col-md">
-          <div class="well">
-            <p>Weather: {{ weather }}</p>
-          </div>
-        </div>
-
-      </div>
-      {% if user.is_authenticated %}
+  
+  <div class="container" style="background: #D4D4D4;" >
+    <h1 align="center">Actual weather</h1>
     <div class="row">
-      <button type="submit" value="search_place" class="btn btn-primary">
-        Search Now
-      </button>
-    </div> 
-    {% endif %}
+      <div class="col-md">
+        <div align="center" style="margin: 0 auto;" class="well">
+          <img src="{{ weather_image }}" width="128" height="128" alt="obrazek">
+        </div>
+      </div>
+      <div class="col-md">
+        <div class="row">
+          <div class="col-md">
+            <div class="well">
+              <p style="margin: 5 auto;">Place: {{ city_name }}</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md">
+            <div class="well">
+              <p style="margin: 5 auto;">Temperature: {{actual_temp}}&deg;C</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md">
+            <div class="well">
+              <p style="margin: 5 auto;">Weather: {{ weather }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+      {% if user.is_authenticated %}
+
+      <div class="row">
+        <div class="col-sm-2">
+          <img src="paris.jpg" alt="Paris">
+        </div>
+        <div class="col-sm-10">
+          <p><strong>Datum</strong></p>
+        </div>
+      </div>
+
+      {% endif %}
+      
     
   </div>
 </div>
 
-<div class="container">{% block content1 %} {% endblock %}</div>
+<div class="container">
+{% block content1 %} 
+
+{% endblock %}
+</div>
 
 {%endblock%}
