--- a/website/templates/nologpage.html
+++ b/website/templates/nologpage.html
@@ -2,22 +2,24 @@
 {%block content%}
 
 <form class="container" method="post">
-  <div class="form-group">
-    <h2 align="center">City Name</h2>
-    <input
-      type="text"
-      class="form-control"
-      placeholder="City Name"
-      name="getMesto"
-    />
-  </div>
-  <div align="center">
-    <button type="submit" value="search_place" class="btn btn-primary">
-      Search Now
-    </button>
-  </div>
+  <h2 align="center">City Name</h2>
+  <div class="row">
+    <div class="col-md-9">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="City Name"
+        name="getMesto"
+      />
+    </div>
+    <div class="col-md-3" style="align: right;">
+      <button type="submit" value="search_place" class="btn btn-primary">
+        Search Now
+      </button>
+    </div>
+  </div>    
 </form>
-  
+</br>
   <div class="container" style="background: #D4D4D4;" >
     <h1 align="center">Actual weather</h1>
     <div class="row">
@@ -51,16 +53,27 @@
       </div>
     </div>
       {% if user.is_authenticated %}
-
-      <div class="row">
+      <h3>History data</h3>
+  </br>
+      {% for i in history%}
+      <div class="row" style= "border:1px solid black;">
+        <div class="col-sm-3">
+          <p>{{i.time}}</p>
+        </div>
         <div class="col-sm-2">
-          <img src="paris.jpg" alt="Paris">
+          <img src="{{ i.condition.icon }}" alt="history">
         </div>
-        <div class="col-sm-10">
-          <p><strong>Datum</strong></p>
+        <div class="col-sm-3">
+          <p>{{ i.condition.text}}<p>
         </div>
+        <div class="col-sm-3">
+          <p>{{ i.temp_c }}&deg;C<p>
+        </div>
+      
+        
       </div>
-
+    </br>
+      {% endfor %}
       {% endif %}
       
     
