--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -33,7 +33,7 @@
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
-          <a class="nav-item nav-link" id="home" href="/nologpage">Home</a>
+          <a class="nav-item nav-link" id="home" href="/nolog">Home</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           {% endif %}
