--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <title>{% block title %}Weather App Hartig{% endblock %}</title>
+    <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,8 +42,8 @@
     </nav>
 
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
-      messages %} {% for category, message in messages %} {% if category ==
-      'error' %}
+    messages %} {% for category, message in messages %} {% if category ==
+    'error' %}
     <div class="alert alert-danger alter-dismissable fade show" role="alert">
       {{ message }}
       <button type="button" class="close" data-dismiss="alert">
@@ -59,12 +59,7 @@
     </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
 
-      <div class="container">
-      {% block content %} 
-      
-      {% endblock %}
-      </div>
-
+    <div class="container">{% block content %} {% endblock %}</div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -81,12 +76,17 @@
       crossorigin="anonymous"
     ></script>
 
-
-    <script scale
-    type="text/javascript"
-    src = "{{ url_for('static', filename = 'index.js') }}"
-    >
-    </script>
-
+{% block javascript %}
+    <script type="text/javascript">
+      function deleteNote(noteId) {
+  fetch("/delete-note", {
+    method: "POST",
+    body: JSON.stringify({ noteId: noteId }),
+  }).then((_res) => {
+    window.location.href = "/";
+  });
+  }
+</script>
+{% endblock %}
   </body>
 </html>
