--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,9 +30,10 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="home" href="/">App</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
+          <a class="nav-item nav-link" id="app" href="/nologin">App</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           {% endif %}
