--- a/website/templates/nologpage.html
+++ b/website/templates/nologpage.html
@@ -1,83 +1,5 @@
 {% extends "base.html" %} {% block title%} Weather App {% endblock%} {%block content %}
 
-<form class="container" method="post">
-  <h2 align="center">City Name</h2>
-  <div class="row">
-    <div class="col-md-9">
-      <input
-        type="text"
-        class="form-control"
-        placeholder="City Name"
-        name="getMesto"
-      />
-    </div>
-    <div class="col-md-3" style="align: right;">
-      <button type="submit" value="search_place" class="btn btn-primary">
-        Search Now
-      </button>
-    </div>
-  </div>    
-</form>
-</br>
-  <div class="container" style="background: #D4D4D4;" >
-    <h1 align="center">Actual weather</h1>
-    <div class="row">
-      <div class="col-md">
-        <div align="center" style="margin: 0 auto;" class="well">
-          <img src="{{ weather_image }}" width="128" height="128" alt="obrazek">
-        </div>
-      </div>
-      <div class="col-md">
-        <div class="row">
-          <div class="col-md">
-            <div class="well">
-              <p style="margin: 5 auto;">Place: {{ city_name }}</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md">
-            <div class="well">
-              <p style="margin: 5 auto;">Temperature: {{actual_temp}}&deg;C</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md">
-            <div class="well">
-              <p style="margin: 5 auto;">Weather: {{ weather }}</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-      {% if user.is_authenticated %}
-      <h3>History data</h3>
-      {% for i in history%}
-      <div class="row" style= "border:1px solid black;">
-        <div class="col-sm-3">
-          <p>{{i.time}}</p>
-        </div>
-        <div class="col-sm-2">
-          <img src="{{ i.condition.icon }}" alt="history">
-        </div>
-        <div class="col-sm-3">
-          <p>{{ i.condition.text}}<p>
-        </div>
-        <div class="col-sm-3">
-          <p>{{ i.temp_c }}&deg;C<p>
-          </div>
-      </div>
-      {% endfor %}
-      {% endif %}
-
-  </div>
-</div>
-
-<div class="container">
-{% block content1 %} 
-
-{% endblock %}
-</div>
+<div>Test</div>
 
 {%endblock%}
